code cleanup part4;